--- a/app/src/main/res/layout/city_list_item_layout.xml
+++ b/app/src/main/res/layout/city_list_item_layout.xml
@@ -2,15 +2,29 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/baseLayoutCS"
+    android:background="@color/white"
+    >
 
     <TextView
+        android:layout_marginTop="10dp"
         android:id="@+id/cityName"
+        android:textSize="16sp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         android:padding="10dp"
-        android:text="city"
+        android:text="City, Country Code"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+
+    <View
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/cityName"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_width="200dp"
+        android:layout_height="1dp"
+        android:background="#eee"
+        />
 
 </android.support.constraint.ConstraintLayout>
