--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -29,6 +29,7 @@
             android:textStyle="italic" />
 
         <ImageView
+            android:visibility="invisible"
             android:id="@+id/cancelIV"
             android:layout_width="50dp"
             android:layout_height="match_parent"
@@ -54,6 +55,49 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/separatorView" />
+
+
+    <LinearLayout
+        android:visibility="invisible"
+        app:layout_constraintTop_toTopOf="@+id/locationsRV"
+        app:layout_constraintBottom_toBottomOf="@+id/locationsRV"
+        app:layout_constraintLeft_toLeftOf="@+id/locationsRV"
+        app:layout_constraintRight_toRightOf="@+id/locationsRV"
+        android:id="@+id/noResultsLL"
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:layout_gravity="center"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:src="@drawable/sad_icon"
+            />
+
+        <TextView
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:textSize="18sp"
+            android:textColor="@color/colorPrimary"
+            android:text="Sorry, but it seems that this city doesn't exist."
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:textColor="@color/colorPrimary"
+            android:text="Check your spelling and try again?"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
 
     <ProgressBar
         android:id="@+id/loadingPB"
