--- a/app/src/main/res/layout/city_list_item_layout.xml
+++ b/app/src/main/res/layout/city_list_item_layout.xml
@@ -18,11 +18,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+    <ImageView
+        app:layout_constraintHorizontal_bias="0.95"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:padding="10dp"
+        android:src="@drawable/forward_arrow"
+        android:layout_width="50dp"
+        android:layout_height="50dp" />
+
     <View
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@+id/cityName"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_width="200dp"
+        android:layout_width="0dp"
         android:layout_height="1dp"
         android:background="#eee"
         />
